--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babylonjs/core": "^6.41.0",
+    "@babylonjs/loaders": "^6.41.0",
+    "@babylonjs/react-native": "^1.8.2",
+    "@babylonjs/react-native-iosandroid-0-71": "^1.8.2",
     "react": "18.2.0",
     "react-native": "0.73.3"
   },
